--- a/templates/typerush/game.html
+++ b/templates/typerush/game.html
@@ -13,7 +13,7 @@ TypeRush
 {% block main_block %}
 <main>
     <div id="time">time: <span id="timer"></span></div>
-    <h1 id="title">
+    <h1 id="title" class="title">
         <!-- SVG content here as before, omitted for brevity -->
         Type Rush
     </h1>
