--- a/templates/typerush/register.html
+++ b/templates/typerush/register.html
@@ -39,7 +39,7 @@
         </div>
         <div class="user-box">
             {{ profile_form.firstname }}
-            <label for="">Firstname</label>
+            <label for="">First Name</label>
         </div>
         <div class="user-box">
             {{ profile_form.surname }}
