--- a/static/stylesheets/base.css
+++ b/static/stylesheets/base.css
@@ -169,6 +169,7 @@ nav li,
     display: inline-flex;
     gap: 20px;
     flex-wrap: wrap;
+
     
     button{
         font-size: 1.5rem;
@@ -176,6 +177,7 @@ nav li,
         transition: all 0.5s;
         border-radius: 10px;
         background-color: var(--black);
+        font-family: var(--body-font);
         color: var(--white);
         padding: 1rem;
     }
