--- a/templates/typerush/edit_profile.html
+++ b/templates/typerush/edit_profile.html
@@ -24,7 +24,12 @@
     <form id="form" action="{% url 'typerush:edit_profile' %}" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="upload">
-            <img id="profile-picture-preview" src="{% static 'images/usercircle2.png' %}"  alt="Profile Picture Preview" style="color: #15F5BA;" />
+            {% if player.profile_picture %}
+                <img id="profile-picture-preview" src="{{ MEDIA_URL }}{{ player.profile_picture }}" alt="Profile Picture Preview" style="color: #15F5BA;"/>
+            {% else %}
+                <!-- Show default profile picture -->
+                <img id="profile-picture-preview" src="{% static 'images/usercircle2.png' %}" alt="default-profile-img" style="color: #15F5BA;"/>
+            {% endif %}
             <div class="round">
                 {{ profile_form.profile_picture }}
                 <i class="fa fa-camera" style="color: #000000;"></i>
