--- a/static/stylesheets/register.css
+++ b/static/stylesheets/register.css
@@ -6,6 +6,14 @@ main {
     padding: 1rem; 
 }
 
+#profile-picture-preview {
+    width: 100px;
+    height: 100px; 
+    border-radius: 50%; 
+    object-fit: cover;
+}
+
+
 .register-box {
     max-width: 400px;
     min-width: 300px;
