--- a/templates/typerush/edit_profile.html
+++ b/templates/typerush/edit_profile.html
@@ -24,7 +24,7 @@
     <form id="form" action="{% url 'typerush:edit_profile' %}" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="upload">
-            <img id="profile-picture-preview" src="{% if player.profile_picture %}{{ MEDIA_URL }}{{ player.profile_picture }}{% else %}{% static 'images/usercircle2.png' %}{% endif %}" alt="profile-img" style="width: 100px; height: 100px;"/>
+            <img id="profile-picture-preview" src="{% if player.profile_picture %}{{ MEDIA_URL }}{{ player.profile_picture }}{% else %}{% static 'images/usercircle2.png' %}{% endif %}" alt="profile-img" class="old-icon"/>
             <div class="round">
                 <input type="file" name="profile_picture" id="profile_picture" style="display: none;"/>
                 <label for="profile_picture" class="fa fa-camera" style="color: #000000; cursor: pointer;"></label>
