--- a/templates/typerush/register.html
+++ b/templates/typerush/register.html
@@ -60,7 +60,7 @@
                 <option value="Andorra">Andorra</option>
                 <option value="Angola">Angola</option>
                 <option value="Anguilla">Anguilla</option>
-                <option value="Antartica">Antarctica</option>
+                <option value="Antarctica">Antarctica</option>
                 <option value="Antigua and Barbuda">Antigua and Barbuda</option>
                 <option value="Argentina">Argentina</option>
                 <option value="Armenia">Armenia</option>
