fixed css for the whole profile page

--- a/static/stylesheets/base.css
+++ b/static/stylesheets/base.css
@@ -224,7 +224,7 @@ body{
     height: 100%;
     top: 0;
     left: 5%;
-    background: #000;
+    background: transparent;
     overflow: hidden;
 
     &::after{
