--- a/static/stylesheets/profile.css
+++ b/static/stylesheets/profile.css
@@ -26,10 +26,9 @@
 
 main {
     margin: 0 20% 0 20%;
-    padding: 8% 0 5% 0;
     display: flex;
     min-height: 50vh;
-
+    padding-top: 100px;
 }
 
 .profile-card {
@@ -39,6 +38,7 @@ main {
     width: 100%;
     background-color: var(--darker);
     border-radius: 40px;
+    z-index: -1;
 }
 /* ------ profile header section */
 .profile-header {
@@ -68,75 +68,106 @@ main {
 
 .profile-names {
     display: flex;
+    position: relative;
     flex-direction: column;
     justify-content: center;
     background-color: var(--darker);
-    padding: 10px 30px;
+    padding: 10px 20px;
     border-radius: 0 50px 50px 0;
-    transform: translateX(-10px);
+    transform: translateX(-42px) translateY(-6px);
+    z-index: -1;
 }
+
+.username{
+    padding-left: 35px;
+}
+
 .fullname {
     color: var(--purple);
+    padding-left: 35px;
 }
 
 
 .profile-body {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     gap: 70px;
     padding: 60px;
 }
-    .profile-actions {
-        display: grid;
-        grid-template-rows: repeat(2, max-content) auto;
-        gap: 10px;
-        margin-top: 30px;
-        font-size: x-large;
 
-    }
-    .profile-actions button {
-        all: unset;
-        padding: 10px;
-        border: 2px solid var(--purple);
-        text-align: center;
-        border-radius: 10px;
-    }
-        .profile-actions .rank {background-color: var(--purple)}
+.profile-actions {
+    padding-top: 20px;
+    flex-wrap: wrap;
+    display: grid;
+    grid-template-rows: repeat(2, max-content) auto;
+    gap: 10px;
+    margin-top: 30px;
+    font-size: x-large;
 
-        .data {
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            color: var(--secondary-color);
-            padding: 30px;
-            text-align: center;
-            border: 1px solid var(--lighter);
-            border-radius: 15px;
-        }
-            .important-data {
-                display: flex;
-                justify-content: space-around;
-                align-items: center;
-            }
-            .other-data {
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
+}
 
-                background-color: var(--secondary-bg);
-                padding: 20px;
-                border-radius: 10px;
-            }
-            .data-item .value {
-                color: var(--purple);
-            }
-                .important-data, .other-data .value {
-                    font-size: var(--title-size);
-                }
-                .important-data, .other-data .title {
-                    font-size: var(--subtitle);
-                }
+.profile-actions button {
+    all: unset;
+    padding: 10px;
+    flex-wrap: wrap;
+    border: 2px solid var(--purple);
+    text-align: center;
+    display: grid;
+    margin: 5px;
+    border-radius: 10px;
+}
+
+.profile-actions .rank {background-color: var(--purple)}
+
+.data {
+    display: flex;
+    flex-direction: column;
+    color: var(--secondary-color);
+    padding: 5%;
+    text-align: center;
+    border: 1px solid var(--lighter);
+    border-radius: 15px;
+    overflow: hidden;
+}
+
+.important-data {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+    padding-bottom: 10px;
+}
+
+.other-data {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    background-color: var(--secondary-bg);
+    border-radius: 10px;
+    gap: 20px;
+    margin: 10px;
+    margin-bottom: 18px;
+    padding-bottom: 10px;
+}
+
+.data-item {
+    margin: 10px;
+}
+
+.data-item .value {
+    color: var(--purple);
+}
+
+.important-data, .other-data .value {
+    font-size: var(--title-size);
+}
+
+.important-data, .other-data .title {
+    font-size: var(--subtitle);
+}
+
 .history{
     display: flex;
     flex-direction: column;
@@ -144,7 +175,7 @@ main {
     min-height: 50vh;
     border: 1px solid var(--dark);
     padding: 10%;
-    padding-top: 5%;  
+    padding-top: 5%;
     margin: 5%;
 
     h1 {
@@ -158,6 +189,7 @@ table {
     width: 100%;
     text-align: left;
     font-size: var(--subtitle);
+    table-layout: fixed;
 }
 
 th, td {
@@ -168,6 +200,7 @@ th, td {
 
 .controls{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
     font-size: var(--subtitle);
@@ -194,3 +227,13 @@ th, td {
     }
 
 }
+
+@media screen and (max-width: 600px) {
+    .profile-names {
+        transform: translateX(-120px);
+    }
+    .profile-image img {
+        transform: translateX(-80px) translateY(1px);
+    }
+}
+
