save game instance (updates on profile, havent checked leaderboard yet

--- a/templates/typerush/game.html
+++ b/templates/typerush/game.html
@@ -29,13 +29,13 @@ TypeRush
 </main>
 <div class="main-panel">
     <div class="select-mode">
-        <button type="button" class="selectMode selected" data-mode="easy">
+        <button type="button" class="selectMode selected" data-mode="Easy">
             Easy
         </button>
-        <button type="button" class="selectMode" data-mode="medium">
+        <button type="button" class="selectMode" data-mode="Medium">
             Medium
         </button>
-        <button type="button" class="selectMode" data-mode="hard">
+        <button type="button" class="selectMode" data-mode="Hard">
             Hard
         </button>
     </div>
