adding rank in leaderboard

--- a/templates/typerush/leaderboard.html
+++ b/templates/typerush/leaderboard.html
@@ -51,13 +51,13 @@
                 Leaderboard
             </div>
             <div class="select-mode">
-                <button type="button" class="selectMode selected" data-mode=1 onclick="showRankLeaderBoard()">
+                <button type="button" class="selectMode selected" data-mode=1>
                     Easy
                 </button>
-                <button type="button" class="selectMode" data-mode=2 onclick="showRankLeaderBoard()">
+                <button type="button" class="selectMode" data-mode=2>
                     Medium
                 </button>
-                <button type="button" class="selectMode" data-mode=3 onclick="showRankLeaderBoard()">
+                <button type="button" class="selectMode" data-mode=3>
                     Hard
                 </button>
             </div>
