adding score to leaderboard

--- a/templates/typerush/leaderboard.html
+++ b/templates/typerush/leaderboard.html
@@ -20,8 +20,8 @@
                     <h2 id="rank">{{ rank }} Place</h2>
                 </div>
                 <div class="score-display">
-                    <h3>Average Score</h3>
-                    <h2>{{ user_instance.average_speed }} WPM</h2>
+                    <h3>Score</h3>
+                    <h2 id="score">{{ score }} WPM</h2>
                 </div>
             </div>
             <div class="personal-info">
