fixing highscores in profile

--- a/templates/typerush/profile.html
+++ b/templates/typerush/profile.html
@@ -49,15 +49,15 @@
                 </div>
                 <div class="other-data">
                     <section class="data-item">
-                        <h3 class="value">{{easy_hs.score}}WPM</h3>
+                        <h3 class="value">{{easy_hs}} WPM</h3>
                         <small class="title">Easy Highscore</small>
                     </section>
                     <section class="data-item">
-                        <h3 class="value">{{medium_hs.score}}WPM</h3>
+                        <h3 class="value">{{medium_hs}} WPM</h3>
                         <small class="title">Medium Highscore</small>
                     </section>
                     <section class="data-item">
-                        <h3 class="value">{{hard_hs.score}}WPM</h3>
+                        <h3 class="value">{{hard_hs}} WPM</h3>
                         <small class="title">Hard Highscore</small>
                     </section>
                 </div>
