--- a/templates/typerush/home.html
+++ b/templates/typerush/home.html
@@ -19,7 +19,8 @@
     <div class ="instructions" style="font-size: 23px;">
         Welcome aboard TypeRusher ! 
         Get ready to put your typing skills to the test in a race against time! 
-        You've got just one minute to press the spacebar, get the next word and type out as many words as you can. 
+        You've got just one minute to type out as many words as you can. Move on to the next word by
+        pressing the space bar. While you're free to spam-click it, remember, it will affect your score!
         And hey, here's the fun part — once the clock stops, 
         your score will proudly take its place on our leaderboard. 
         It's the perfect chance to playfully rib your friends about their typing speed, 
