--- a/templates/typerush/profile.html
+++ b/templates/typerush/profile.html
@@ -31,7 +31,7 @@
 
         <div class="profile-body"><!-- profile body section -->
             <div class="profile-actions">
-                <button type ="button" class="rank" onmouseover="showRanks()">Ranks:
+                <button type ="button" class="rank" onmouseover="showRanks()">Ranks
                     <small class = "hidden" id="easyRank">Easy >> {{rank.easy}}</small>
                     <small class = "hidden" id="mediumRank">Medium >> {{rank.medium}}</small>
                     <small class = "hidden" id="hardRank">Hard >> {{rank.hard}}</small>
