--- a/templates/typerush/register.html
+++ b/templates/typerush/register.html
@@ -15,11 +15,11 @@
 {% if registered %}
     <h2 id="registered-msg"> Thank you for registering !</h2>
     <h3> </h3>
-    <a href="{% url 'typerush:home' %}" id="link-to-home" style="text-align: center;" class="hyperlink">Return to homepage</a>
+    <a href="{% url 'typerush:user_login' %}" id="link-to-home" style="text-align: center;" class="hyperlink">Login Now</a>
 {% else %}
 <div class="register-box">
     
-    <h2>Register</h2>
+    <h2 class="subtitle">Register</h2>
 
     <form id="form" action="{% url 'typerush:register' %}" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
